// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ApplicationHeaderLayout correctly applies the theme context className 1`] = `
<InjectIntl(ApplicationHeaderLayout)
  intl={
    {
      "defaultFormats": {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": {},
      "formatters": {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
>
  <ApplicationHeaderLayout
    intl={
      {
        "defaultFormats": {},
        "defaultLocale": "en",
        "formatDate": [Function],
        "formatHTMLMessage": [Function],
        "formatMessage": [Function],
        "formatNumber": [Function],
        "formatPlural": [Function],
        "formatRelative": [Function],
        "formatTime": [Function],
        "formats": {},
        "formatters": {
          "getDateTimeFormat": [Function],
          "getMessageFormat": [Function],
          "getNumberFormat": [Function],
          "getPluralFormat": [Function],
          "getRelativeFormat": [Function],
        },
        "locale": "en",
        "messages": null,
        "now": [Function],
        "onError": [Function],
        "textComponent": "span",
        "timeZone": null,
      }
    }
  >
    <div
      className="header fill clinical-lowlight-theme"
    >
      <button
        className="skip-content"
        onClick={[Function]}
        type="button"
      >
        Terra.ApplicationHeaderLayout.SkipToContent
      </button>
      <div
        className="fill header-body"
      >
        <div
          className="fill header-inner"
        />
      </div>
    </div>
  </ApplicationHeaderLayout>
</InjectIntl(ApplicationHeaderLayout)>
`;

exports[`ApplicationHeaderLayout should render with provided extensions 1`] = `
<ApplicationHeaderLayout
  extensions={
    <div
      id="test-extensions"
    >
      Extensions
    </div>
  }
  intl={
    {
      "defaultFormats": {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": {},
      "formatters": {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
/>
`;

exports[`ApplicationHeaderLayout should render with provided extensions and navigation 1`] = `
<ApplicationHeaderLayout
  extensions={
    <div
      id="test-extensions"
    >
      Extensions
    </div>
  }
  intl={
    {
      "defaultFormats": {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": {},
      "formatters": {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  navigation={
    <div
      id="test-navigation"
    >
      Navigation
    </div>
  }
/>
`;

exports[`ApplicationHeaderLayout should render with provided extensions, navigation, and logo 1`] = `
<ApplicationHeaderLayout
  extensions={
    <div
      id="test-extensions"
    >
      Extensions
    </div>
  }
  intl={
    {
      "defaultFormats": {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": {},
      "formatters": {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  logo={
    <div
      id="test-logo"
    >
      Logo
    </div>
  }
  navigation={
    <div
      id="test-navigation"
    >
      Navigation
    </div>
  }
/>
`;

exports[`ApplicationHeaderLayout should render with provided extensions, navigation, logo, and toggle 1`] = `
<ApplicationHeaderLayout
  extensions={
    <div
      id="test-extensions"
    >
      Extensions
    </div>
  }
  intl={
    {
      "defaultFormats": {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": {},
      "formatters": {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  logo={
    <div
      id="test-logo"
    >
      Logo
    </div>
  }
  navigation={
    <div
      id="test-navigation"
    >
      Navigation
    </div>
  }
  toggle={
    <div
      id="test-toggle"
    >
      Toggle
    </div>
  }
/>
`;

exports[`ApplicationHeaderLayout should render with provided extensions, navigation, logo, toggle, and utilities 1`] = `
<ApplicationHeaderLayout
  extensions={
    <div
      id="test-extensions"
    >
      Extensions
    </div>
  }
  intl={
    {
      "defaultFormats": {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": {},
      "formatters": {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  logo={
    <div
      id="test-logo"
    >
      Logo
    </div>
  }
  navigation={
    <div
      id="test-navigation"
    >
      Navigation
    </div>
  }
  toggle={
    <div
      id="test-toggle"
    >
      Toggle
    </div>
  }
  utilities={
    <div
      id="test-utilities"
    >
      Utilities
    </div>
  }
/>
`;

exports[`ApplicationHeaderLayout should render with provided logo 1`] = `
<ApplicationHeaderLayout
  intl={
    {
      "defaultFormats": {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": {},
      "formatters": {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  logo={
    <div
      id="test-logo"
    >
      Logo
    </div>
  }
/>
`;

exports[`ApplicationHeaderLayout should render with provided logo, toggle, and utilities 1`] = `
<ApplicationHeaderLayout
  intl={
    {
      "defaultFormats": {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": {},
      "formatters": {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  logo={
    <div
      id="test-logo"
    >
      Logo
    </div>
  }
  toggle={
    <div
      id="test-toggle"
    >
      Toggle
    </div>
  }
  utilities={
    <div
      id="test-utilities"
    >
      Utilities
    </div>
  }
/>
`;

exports[`ApplicationHeaderLayout should render with provided navigation 1`] = `
<ApplicationHeaderLayout
  intl={
    {
      "defaultFormats": {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": {},
      "formatters": {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  navigation={
    <div
      id="test-navigation"
    >
      Navigation
    </div>
  }
/>
`;

exports[`ApplicationHeaderLayout should render with provided navigation, logo, toggle, and utilities 1`] = `
<ApplicationHeaderLayout
  intl={
    {
      "defaultFormats": {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": {},
      "formatters": {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  logo={
    <div
      id="test-logo"
    >
      Logo
    </div>
  }
  navigation={
    <div
      id="test-navigation"
    >
      Navigation
    </div>
  }
  toggle={
    <div
      id="test-toggle"
    >
      Toggle
    </div>
  }
  utilities={
    <div
      id="test-utilities"
    >
      Utilities
    </div>
  }
/>
`;

exports[`ApplicationHeaderLayout should render with provided toggle 1`] = `
<ApplicationHeaderLayout
  intl={
    {
      "defaultFormats": {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": {},
      "formatters": {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  toggle={
    <div
      id="test-toggle"
    >
      Toggle
    </div>
  }
/>
`;

exports[`ApplicationHeaderLayout should render with provided toggle and utilities 1`] = `
<ApplicationHeaderLayout
  intl={
    {
      "defaultFormats": {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": {},
      "formatters": {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  toggle={
    <div
      id="test-toggle"
    >
      Toggle
    </div>
  }
  utilities={
    <div
      id="test-utilities"
    >
      Utilities
    </div>
  }
/>
`;

exports[`ApplicationHeaderLayout should render with provided utilities 1`] = `
<ApplicationHeaderLayout
  intl={
    {
      "defaultFormats": {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": {},
      "formatters": {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  utilities={
    <div
      id="test-utilities"
    >
      Utilities
    </div>
  }
/>
`;

exports[`ApplicationHeaderLayout should render without optional props 1`] = `
<ApplicationHeaderLayout
  intl={
    {
      "defaultFormats": {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": {},
      "formatters": {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
/>
`;
